Revision history for Dist-Metadata

{{$NEXT}}

0.904     2011-06-24T06:09:23Z

  - Fix path mismatch for "provides" when using Module::Metadata on Win32
  - Add more TODO ideas

0.903     2011-06-23T05:59:41Z

  - Load File::Spec (and subclasses) consistently

0.902     2011-06-23T05:51:42Z

  [Fixes]
  - Change determine_packages to always return paths in unix format
    (as required by CPAN::Meta::Spec)
  - Fix regexp path bugs on windows

  [Enhancements]
  - Include 'xt/' in the default no_index:directory list

  [Documentation]
  - Add items to pod TODO list

0.901     2011-06-22T01:22:07Z

  - Initial release